# py-mdscript

./: README.md  setup.cfg
runmd/: __init__.py  __main__.py  runmd.py
