[metadata]
name = runmd
version = attr: runmd.__version__
description = 'Run a markdown codeblocks as a python script'
author = Yash Tripathi
author_email = tripathiyash97@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files =
    LICENSE
project_urls =
    Source = https://github.com/l4zy0n3/py-mdscript
classifers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
include =
    runmd

[options.entry_points]
console_scripts =
    archinstall = runmd:run_as_script